# lamplang

./: .gitignore  Cargo.toml  README.md  code.c
lib/: CMakeLists.txt
lib/include/: area.h  io.h  math.h
lib/src/: area.c  io.c  math.c
src/: args.rs  lib.rs  main.rs
src/translator/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  value.rs
